<resources>
    <string name="app_name">MAD Group</string>
    <string name="dob">Date of Birth</string>
    <string name="email">Email Address</string>
    <string name="gen">Gender</string>
    <string name="p_num">Phone Number</string>
    <string name="A_Request">My Active Request</string>
    <string name="P_Request">Previous Request</string>
    <string name="Work_Type">Preferred Work Type</string>
    <string name="S_fee">Average Service Fee</string>
    <string name="C_num">Contact Number</string>
    <string name="B_Description">Brief Description</string>
</resources>